--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.30.1",
-    "react-scripts": "^0.0.0",
+    "react-scripts": "4.0.3",
     "typescript": "^4.1.2"
   },
   "devDependencies": {
